--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,13 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	//om LocalDateTime te parsen
+	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.5'
+
+	//selenium dependencies
+	compile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.1'
+
+
 }
