--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.datasource.url=jdbc:h2:file:~/prddb;AUTO_SERVER=TRUE
+#spring.datasource.url=jdbc:h2:file:~/prddb;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:tcp://localhost/~/development/storage/h2/bla
+
+liquibase.change-log=classpath:db.changelog-master.xml
+
+#tables zijn gegenereerd door Liquibase
+spring.jpa.hibernate.ddl-auto=none
