--- a/src/main/resources/db/changelog/001_db.changelog-first.yaml
+++ b/src/main/resources/db/changelog/001_db.changelog-first.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: yannis
       changes:
         - createTable:
-            tableName: person
+            tableName: lampen
             columns:
               - column:
                   name: id
@@ -14,11 +14,11 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: first_name
+                  name: lampnaam
                   type: varchar(50)
               - column:
-                  name: last_name
-                  type: varchar(50)
+                  name: bereikbaar
+                  type: BOOLEAN
               - column:
                   name: creation_time
                   type: varchar(50)
