--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ liquibase.change-log=classpath:db.changelog-master.xml
 
 #tables zijn gegenereerd door Liquibase
 spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.springframework=DEBUG
