multi module project

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,4 +6,4 @@ liquibase.change-log=classpath:db.changelog-master.xml
 #tables zijn gegenereerd door Liquibase
 spring.jpa.hibernate.ddl-auto=none
 
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
