--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,63 @@
 buildscript {
-	ext {
-		springBootVersion = '1.4.3.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.4.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+subprojects {
+
+
+    apply plugin: 'java'
+
+    jar {
+        baseName = 'dbapp'
+        version = '0.0.1-SNAPSHOT'
+    }
+
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
+
+
+
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'application'
+project(':api') {
 
-jar {
-	baseName = 'dbapp'
-	version = '0.0.1-SNAPSHOT'
 }
 
-sourceCompatibility = 1.8
+project(':common') {
 
-repositories {
-	mavenCentral()
 }
 
-
-dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.liquibase:liquibase-core')
-	compile('org.springframework.boot:spring-boot-starter-web')
-
-	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('com.h2database:h2')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-
-	//om LocalDateTime te parsen
-	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.5'
-
-	//selenium dependencies
-	compile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
-	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.1'
+project(':app') {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'application'
 
 
+    dependencies {
+        compile('org.springframework.boot:spring-boot-starter-data-jpa')
+        compile('org.liquibase:liquibase-core')
+        compile('org.springframework.boot:spring-boot-starter-web')
+
+        runtime('org.springframework.boot:spring-boot-devtools')
+        runtime('com.h2database:h2')
+        testCompile('org.springframework.boot:spring-boot-starter-test')
+
+        //om LocalDateTime te parsen
+        compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.5'
+
+        //selenium dependencies
+        compile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+        compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.1'
+
+
+    }
 }
