--- a/app/src/test/resources/test.properties
+++ b/app/src/test/resources/test.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/yannis
 
 spring.jpa.hibernate.ddl-auto=none
