--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,3 +7,9 @@ liquibase.change-log=classpath:db.changelog-master.xml
 spring.jpa.hibernate.ddl-auto=none
 
 logging.level.org.springframework=INFO
+
+spring.jpa.database=h2
+spring.jpa.database-platform=H2
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=createh2.sql
