--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,11 @@ project(':app') {
         compile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
         compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.1'
 
+        //envers dependencies
+        // https://mvnrepository.com/artifact/org.springframework.data/spring-data-envers
+        compile group: 'org.springframework.data', name: 'spring-data-envers', version: '1.0.6.RELEASE'
+
+
 
     }
 }
